Updated development history & new features

--- a/themes/site/opensource/uncompressed.index.html
+++ b/themes/site/opensource/uncompressed.index.html
@@ -183,7 +183,7 @@
 				<div class="fh5co-project-inner row GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
 					<div class="fh5co-text col-md-4 animate-box GMM_sortable_handler GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
 						<h2 class="GMM_sortable_handler">No WordPress, No Coding, No Design, No Hidden Fee</h2>
-						<p class="GMM_sortable_handler">A Nice Drag-n-Drop Website & Online Store Builder in Your Hand for 2020</p>
+						<p class="GMM_sortable_handler">A Nice Drag-n-Drop Website & Online Store Builder in Your Hand for 2021</p>
 						<p class="GMM_sortable_handler"><font style="color:red;">Strongest</font>, <font style="color:orangered;">Most Powerful</font> &amp; <font style="color:springgreen;">Neatest</font> Diamond script among Other Free &amp; Paid Thousands</p>
 						<h4 class="GMM_sortable_handler">Establish ➜ Do Marketing ➜ Earnings</h4>
 						<p class="GMM_sortable_handler"><a href="about.html" class="btn btn-light btn-no-uppercase btn-outline transition">About gomymobiBSB</a></p>
@@ -239,8 +239,11 @@
 						</div>
 					</div>
 					<div class="fh5co-text col-md-5 animate-box GMM_sortable_handler GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
-						<h2 class="GMM_sortable_handler">gomymobiBSB: Business Website & Online Store Builder</h2>
+						<h2 class="GMM_sortable_handler">gomymobiBSB: Website & Store Builder with Domains</h2>
 						<ul class="fh5co-social fh5co-stack col-md-6 GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
+							<li class="GMM_sortable_handler">
+								<a href="#" class="tooltips" title="Integrate Namecheap API into your platform to allow users to buy, transfer & renew domains automatically"><i class="fa fa-globe"></i> Domainer</a>
+							</li>
 							<li class="GMM_sortable_handler">
 								<a href="#" class="tooltips" title="Offer your end clients the abilities to create business website from the zero with element builder"><i class="fa fa-object-group"></i> Element Builder</a>
 							</li>
@@ -267,6 +270,9 @@
 							</li>
 						</ul>
 						<ul class="fh5co-social fh5co-stack col-md-6 GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
+							<li class="GMM_sortable_handler">
+								<a href="#" class="tooltips" title="Users may build & open stores without assigning to a site, all stores may work without slug of site, work directly from root path of custom domains or sub domains"><i class="icon-close"></i> Store wo Site</a>
+							</li>
 							<li class="GMM_sortable_handler">
 								<a href="#" class="tooltips" title="Best of best scripts to build websites & online stores"><i class="icon-handbag"></i> Store Builder</a>
 							</li>
@@ -544,7 +550,7 @@ Donation+to+gomymobiBSB&no_note=0&cn=&currency_code=USD&bn=PP-DonationsBF:btn_do
 				<div class="row">
 					<div class="col-md-12 text-center GMM_sortable_custom" data-gmm-sortable-handle=".GMM_sortable_handler">
 						<p class="animate-box GMM_sortable_handler">
-							Copyright 2020 &copy; <a href="//www.prescriptz.com/" target="_blank">PREScriptZ.com</a> <br> 
+							Copyright 2020 - 2021 &copy; <a href="//www.prescriptz.com/" target="_blank">PREScriptZ.com</a> <br> 
 							this page created & hosted by <a href="//www.gomymobi.com/" target="_blank">www.gomymobi.com</a><br/>
 							theme from <a href="//freehtml5.co/" target="_blank">FREEHTML5.co</a> & enhanced with <font class="animated infinite bounceIn" style="color:crimson;">❤</font> by <a href="//www.prescriptz.com/" target="_blank">PREScriptZ.com</a></p>
 						<p class="animate-box GMM_sortable_handler">
